prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-app-svc
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: ui-app
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: landing-svc
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: landing-app
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 80
