prod/ingress.yaml
# Instead of original Ingress use traefik because of middlewares and simple https
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prod-ingress
  namespace: prod
spec:
  # entryPoints:
  #   - websecure
  routes:
    - kind: Rule
      match: Host(`toxics.space`)
      priority: 1
      middlewares:
      - name: redirect-to-https
      services:
      - name: landing-svc
        port: 8088
    - kind: Rule
      match: Host(`ui.toxics.space`)
      priority: 1
      middlewares:
      - name: redirect-to-https
      services:
      - name: ui-app-svc
        port: 8088
  tls:
    certResolver: le
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: prod
spec:
  redirectScheme:
    scheme: https
    permanent: true
